--- a/website/adults/index.html
+++ b/website/adults/index.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Adults &#8211; James Keller Driving School</title>
+    <title>Adults Sam's Driving Academy</title>
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link rel="alternate" type="application/rss+xml" title="James Keller Driving School &raquo; Feed" href="../feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="James Keller Driving School &raquo; Comments Feed" href="../comments/feed/index.html" />
