--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ img.emoji {
             <div class="menu-address">
                                 <aside id="text-2" class="footer-top-widget clearfix widget_text">			<div class="textwidget"><ul class="list-inline">
                   <li>
-                    <span><i class="fa fa-map-marker" aria-hidden="true"></i></span> <span>1600 Pennsylvania Ave NW, Washington, DC</span>
+                    <span><i class="fa fa-map-marker" aria-hidden="true"></i></span> <span>93 Canterbury street, Zonnebloem, Cape Town, 7925</span>
                   </li>
                   <li>
-                    <a href="tel:554-322-54-12"><span><i class="fa fa-phone" aria-hidden="true"></i></span> <span>554-322-54-12</span></a>
+                    <a href="tel:554-322-54-12"><span><i class="fa fa-phone" aria-hidden="true"></i></span> <span>+27 (78) 581-5421</span></a>
                   </li>
                 </ul></div>
 		</aside>                            </div>
