--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@ img.emoji {
 </div></div></div></div></div></div></div></div></div></div><div id="pg-6-6"  class="panel-grid panel-has-style" ><div class="address-section panel-row-style panel-row-style-for-6-6" ><div id="pgc-6-6-0"  class="panel-grid-cell" ><div id="panel-6-6-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="6" ><div class="container panel-widget-style panel-widget-style-for-6-6-0-0" ><div id="pl-w58f8580648251"  class="panel-layout" ><div id="pg-w58f8580648251-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f8580648251-0-0"  class="panel-grid-cell" ><div id="panel-w58f8580648251-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="home-address panel-widget-style panel-widget-style-for-w58f8580648251-0-0-0" ><div id="pl-w58f85806482b6"  class="panel-layout" ><div id="pg-w58f85806482b6-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f85806482b6-0-0"  class="panel-grid-cell" ><div id="panel-w58f85806482b6-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="single-address panel-widget-style panel-widget-style-for-w58f85806482b6-0-0-0" ><div id="pl-w58f858064830d"  class="panel-layout" ><div id="pg-w58f858064830d-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f858064830d-0-0"  class="panel-grid-cell" ><div id="panel-w58f858064830d-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-phone"></i></p>
-<address class="sub-address"><strong>PHONE:</strong> <br /><a href="tel:(088) 554-322-54-12">(088) 554-322-54-12</a> or <br /><a href="tel:(088) 555-322-63-11"> (088) 555-322-63-11</a></address>
+<address class="sub-address"><strong>PHONE:</strong> <br /><a href="tel:(081) 078 3572">(081) 078 3572 </a> or <br /><a href="tel:+27 (78) 581-5421"> +27 (78) 581-5421</a></address>
 </div>
 </div></div></div></div></div></div></div></div><div id="pgc-w58f85806482b6-0-1"  class="panel-grid-cell" ><div id="panel-w58f85806482b6-0-1-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="1" ><div class="single-address panel-widget-style panel-widget-style-for-w58f85806482b6-0-1-0" ><div id="pl-w58f64ed9ebb6a"  class="panel-layout" ><div id="pg-w58f64ed9ebb6a-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f64ed9ebb6a-0-0"  class="panel-grid-cell" ><div id="panel-w58f64ed9ebb6a-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-map-marker"></i></p>
-<address class="sub-address"><strong>ADDRESS: </strong> <br />1600 Pennsylvania Ave NW, <br />Washington, DC</address>
+<address class="sub-address"><strong>ADDRESS: </strong> <br />93 Canterbury street, <br />Zonnebloem, Cape Town, 7925</address>
 </div>
 </div></div></div></div></div></div></div></div><div id="pgc-w58f85806482b6-0-2"  class="panel-grid-cell" ><div id="panel-w58f85806482b6-0-2-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="2" ><div class="single-address panel-widget-style panel-widget-style-for-w58f85806482b6-0-2-0" ><div id="pl-w58f8580649630"  class="panel-layout" ><div id="pg-w58f8580649630-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f8580649630-0-0"  class="panel-grid-cell" ><div id="panel-w58f8580649630-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-envelope"></i></p>
-<address class="sub-address"><strong>EMAIL:</strong> <br /><a href="mailto:info@jameskeller.com">info@jameskeller.com</a></address>
+<address class="sub-address"><strong>EMAIL:</strong> <br /><a href="mailto:admin@samsdrivingacademy.co.za">admin@samsdrivingacademy.co.za</a></address>
 </div>
 </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>      </section>
     
@@ -400,7 +400,7 @@ img.emoji {
                 <li><a href="index.html#"><i class="fa fa-youtube-play"></i></a></li>
               </ul></div>
 		</div>                          </div>
-                          <p>&copy;2017. <p id="text-3" class="cop-text widget_text"><p>Website And Internet Marketing Powered By Driving School Marketing</p>			<div class="textwidget"></div>
+                          <p>&copy;2018. <p id="text-3" class="cop-text widget_text"><p>Website And Internet Marketing Powered By NSeye-Corp</p>			<div class="textwidget"></div>
 		</p></p> 
                       </div>
         </div>
