--- a/education/index.html
+++ b/education/index.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Education &#8211; James Keller Driving School</title>
+    <title>Services &#8211; James Keller Driving School</title>
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link rel="alternate" type="application/rss+xml" title="James Keller Driving School &raquo; Feed" href="../feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="James Keller Driving School &raquo; Comments Feed" href="../comments/feed/index.html" />
@@ -69,10 +69,10 @@ img.emoji {
               <div class="menu-address">
                               <aside id="text-2" class="footer-top-widget clearfix widget_text">			<div class="textwidget"><ul class="list-inline">
                   <li>
-                    <span><i class="fa fa-map-marker" aria-hidden="true"></i></span> <span>1600 Pennsylvania Ave NW, Washington, DC</span>
+                    <span><i class="fa fa-map-marker" aria-hidden="true"></i></span> <span>93 Canterbury street, Zonnebloem, Cape Town, 7925</span>
                   </li>
                   <li>
-                    <a href="tel:554-322-54-12"><span><i class="fa fa-phone" aria-hidden="true"></i></span> <span>554-322-54-12</span></a>
+                    <a href="tel:081 078 3572"><span><i class="fa fa-phone" aria-hidden="true"></i></span> <span>(081) 078 3572</span></a>
                   </li>
                 </ul></div>
 		</aside>                            </div>
@@ -136,7 +136,7 @@ img.emoji {
         <section id="post-16" class="post-16 page type-page status-publish hentry">
         <div id="pl-16"  class="panel-layout" ><div id="pg-16-0"  class="panel-grid panel-has-style" ><div class="about panel-row-style panel-row-style-for-16-0" ><div id="pgc-16-0-0"  class="panel-grid-cell" ><div id="panel-16-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="container panel-widget-style panel-widget-style-for-16-0-0-0" ><div id="pl-w59fad4a1299ce"  class="panel-layout" ><div id="pg-w59fad4a1299ce-0"  class="panel-grid panel-no-style" ><div id="pgc-w59fad4a1299ce-0-0"  class="panel-grid-cell" ><div id="panel-w59fad4a1299ce-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="habout panel-widget-style panel-widget-style-for-w59fad4a1299ce-0-0-0" ><div id="pl-w59fad4a129a1c"  class="panel-layout" ><div id="pg-w59fad4a129a1c-0"  class="panel-grid panel-no-style" ><div id="pgc-w59fad4a129a1c-0-0"  class="panel-grid-cell" ><div id="panel-w59fad4a129a1c-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="section-head text-center panel-widget-style panel-widget-style-for-w59fad4a129a1c-0-0-0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-	<h2>education</h2>
+	<h2>Services</h2>
 </div>
 </div></div></div></div></div><div id="pg-w59fad4a129a1c-1"  class="panel-grid panel-has-style" ><div class="promo-about panel-row-style panel-row-style-for-w59fad4a129a1c-1" ><div id="pgc-w59fad4a129a1c-1-0"  class="panel-grid-cell" ><div id="panel-w59fad4a129a1c-1-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="1" ><div class="promo-about edusubdist panel-widget-style panel-widget-style-for-w59fad4a129a1c-1-0-0" ><div id="pl-w59fad4a129a66"  class="panel-layout" ><div id="pg-w59fad4a129a66-0"  class="panel-grid panel-no-style" ><div id="pgc-w59fad4a129a66-0-0"  class="panel-grid-cell" ><div id="panel-w59fad4a129a66-0-0-0" class="so-panel widget widget_sow-image panel-first-child" data-index="0" ><div class="top-promo-img panel-widget-style panel-widget-style-for-w59fad4a129a66-0-0-0" ><div class="so-widget-sow-image so-widget-sow-image-default-bd5cd9da0588">
 
@@ -146,7 +146,7 @@ img.emoji {
 
 </div></div></div><div id="panel-w59fad4a129a66-0-0-1" class="so-panel widget widget_sow-editor" data-index="1" ><div class="abt-right panel-widget-style panel-widget-style-for-w59fad4a129a66-0-0-1" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-	<p>We want you to feel comfortable and knowledgeable behind the wheel, and we put together this section of educational materials to help you make good decisions about your driving instruction and driving generally. Please feel free to review this material at your convenience, and let us know if you have any questions.</p>
+	<p>Sam’s Driving Academy offers a wide range of courses and services that are designed to cater for every need of our clients, as well as providing convenience to the process of registering for both your drivers and learners license.</p>
 <p>              Our guides on choosing the right driving school, preparing for the road test, and driving basics are some of the most popular articles on our website. We hope you find them as useful as did the hundreds of other driving school students who have also read them.</p>
 </div>
 </div></div></div><div id="panel-w59fad4a129a66-0-0-2" class="so-panel widget widget_siteorigin-panels-builder panel-last-child" data-index="2" ><div class="edudist panel-widget-style panel-widget-style-for-w59fad4a129a66-0-0-2" ><div id="pl-w59fad4a129ac8"  class="panel-layout" ><div id="pg-w59fad4a129ac8-0"  class="panel-grid panel-no-style" ><div id="pgc-w59fad4a129ac8-0-0"  class="panel-grid-cell" ><div id="panel-w59fad4a129ac8-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="single-education panel-widget-style panel-widget-style-for-w59fad4a129ac8-0-0-0" ><div id="pl-w59fad4a129b20"  class="panel-layout" ><div id="pg-w59fad4a129b20-0"  class="panel-grid panel-no-style" ><div id="pgc-w59fad4a129b20-0-0"  class="panel-grid-cell" ><div id="panel-w59fad4a129b20-0-0-0" class="so-panel widget widget_sow-image panel-first-child" data-index="0" ><div class="so-widget-sow-image so-widget-sow-image-default-bd5cd9da0588">
@@ -194,17 +194,17 @@ img.emoji {
 </div></div></div></div></div></div></div></div></div></div><div id="pg-16-2"  class="panel-grid panel-has-style" ><div class="address-section panel-row-style panel-row-style-for-16-2" ><div id="pgc-16-2-0"  class="panel-grid-cell" ><div id="panel-16-2-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="2" ><div class="container panel-widget-style panel-widget-style-for-16-2-0-0" ><div id="pl-w58f8587007fc8"  class="panel-layout" ><div id="pg-w58f8587007fc8-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f8587007fc8-0-0"  class="panel-grid-cell" ><div id="panel-w58f8587007fc8-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="home-address panel-widget-style panel-widget-style-for-w58f8587007fc8-0-0-0" ><div id="pl-w58f858700801f"  class="panel-layout" ><div id="pg-w58f858700801f-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f858700801f-0-0"  class="panel-grid-cell" ><div id="panel-w58f858700801f-0-0-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="0" ><div class="single-address panel-widget-style panel-widget-style-for-w58f858700801f-0-0-0" ><div id="pl-w58f8587008072"  class="panel-layout" ><div id="pg-w58f8587008072-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f8587008072-0-0"  class="panel-grid-cell" ><div id="panel-w58f8587008072-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-phone"></i></p>
-<address class="sub-address"><strong>PHONE:</strong> <br /><a href="tel:(088) 554-322-54-12">(088) 554-322-54-12</a> or <br /><a href="tel:(088) 555-322-63-11"> (088) 555-322-63-11</a></address>
+<address class="sub-address"><strong>PHONE:</strong> <br /><a href="tel:(081) 078 3572">(081) 078 3572</a> or <br /><a href="tel:++27 (78) 581-5421"> +27 (78) 581-5421</a></address>
 </div>
 </div></div></div></div></div></div></div></div><div id="pgc-w58f858700801f-0-1"  class="panel-grid-cell" ><div id="panel-w58f858700801f-0-1-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="1" ><div class="single-address panel-widget-style panel-widget-style-for-w58f858700801f-0-1-0" ><div id="pl-w58f64ed9ebb6a"  class="panel-layout" ><div id="pg-w58f64ed9ebb6a-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f64ed9ebb6a-0-0"  class="panel-grid-cell" ><div id="panel-w58f64ed9ebb6a-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-map-marker"></i></p>
-<address class="sub-address"><strong>ADDRESS: </strong> <br />1600 Pennsylvania Ave NW, <br />Washington, DC</address>
+<address class="sub-address"><strong>ADDRESS: </strong> <br />93 Canterbury street, <br />Zonnebloem, Cape Town, 7925</address>
 </div>
 </div></div></div></div></div></div></div></div><div id="pgc-w58f858700801f-0-2"  class="panel-grid-cell" ><div id="panel-w58f858700801f-0-2-0" class="so-panel widget widget_siteorigin-panels-builder panel-first-child panel-last-child" data-index="2" ><div class="single-address panel-widget-style panel-widget-style-for-w58f858700801f-0-2-0" ><div id="pl-w58f858700873f"  class="panel-layout" ><div id="pg-w58f858700873f-0"  class="panel-grid panel-no-style" ><div id="pgc-w58f858700873f-0-0"  class="panel-grid-cell" ><div id="panel-w58f858700873f-0-0-0" class="so-panel widget widget_sow-editor panel-first-child panel-last-child" data-index="0" ><div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
 	<p><i class="fa fa-envelope"></i></p>
-<address class="sub-address"><strong>EMAIL:</strong> <br /><a href="mailto:info@jameskeller.com">info@jameskeller.com</a></address>
+<address class="sub-address"><strong>EMAIL:</strong> <br /><a href="mailto:admin@samsdrivingacademy.co.za">admin@samsdrivingacademy.co.za</a></address>
 </div>
 </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>      </section>
     
@@ -267,7 +267,7 @@ img.emoji {
                 <li><a href="index.html#"><i class="fa fa-youtube-play"></i></a></li>
               </ul></div>
 		</div>                          </div>
-                          <p>&copy;2017. <p id="text-3" class="cop-text widget_text"><p>Website And Internet Marketing Powered By Driving School Marketing</p>			<div class="textwidget"></div>
+                          <p>&copy;2017. <p id="text-3" class="cop-text widget_text"><p>Website And Internet Marketing Powered By NSeye-Corp</p>			<div class="textwidget"></div>
 		</p></p> 
                       </div>
         </div>
